--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-	</head>
-	<body>
-		<h1>YSC<h1>
-		<p>ysc homepage<p>
-	</body>
+
+<head>
+	<title>Yonsei Security Club</title>
+	<meta charset="utf-8">
+</head>
+
+<body>
+	<header>
+		<h1>YSC</h1>
+	</header>
+	<p>ysc homepage</p>
+	<div>
+		<img src="" width="100%" alt="간략한 소개이미지">
+	</div>
+	<div>
+		<p>YSC 일정</p>
+		<iframe
+			src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FSeoul&showNav=0&showDate=1&showTitle=0&showCalendars=0&showTz=0&showPrint=0&src=bW1lMGY3NmcwZm1pOTRpaGpucW9vN3IzcDBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23AD1457"
+			style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+	</div>
+</body>
+
 </html>
