--- a/index.html
+++ b/index.html
@@ -2,23 +2,59 @@
 <html>
 
 <head>
-	<title>Yonsei Security Club</title>
+	<title>Yonsei Security Club - Home</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="/css/home.css">
 </head>
 
 <body>
-	<header>
-		<h1>YSC</h1>
-	</header>
-	<p>ysc homepage</p>
-	<div>
-		<img src="" width="100%" alt="간략한 소개이미지">
+	<div class="header-section">
+		<div class="header">
+			<img class="image" src="YSC logo.png" alt="YSC Logo">
+			<h1 class="heading">Yonsei Security Club</h1>
+			<img class="image" src="Yonsei logo.png" alt="Yonsei Logo">
+		</div>
+		<div class="nav-bar">
+			<a class="nav-button" href="/">Home</a>
+			<a class="nav-button" href="/writeups">CTF Writeups</a>
+		</div>
 	</div>
-	<div>
-		<p>YSC 일정</p>
-		<iframe
-			src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FSeoul&showNav=0&showDate=1&showTitle=0&showCalendars=0&showTz=0&showPrint=0&src=bW1lMGY3NmcwZm1pOTRpaGpucW9vN3IzcDBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23AD1457"
-			style="border-width:0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+
+
+
+	<div class="page-content">
+		<p>
+			안녕하세요. 연세대학교 보안/해킹 동아리 Yonsei Security Club (YSC)입니다!<br/>
+			<br/>
+			YSC에서는 보안 취약점과 공격 기법을 공부하는 것을 주 목적으로 합니다. CTF 등 보안 관련 이벤트에 정기적으로 참여하며 그에 필요한 시스템 해킹(포너블)과 바이너리 실행파일을 분석하는 리버싱을 학습하는 것을 목표로 합니다.<br/>
+			<br/>
+			우리 동아리는 2021년 1학기에 송도경 교수님 지도하에 시작했습니다.<br/>
+			<br/>
+		</p>
+		<div style="height: 10px;"></div>
+		<h2>Website is WIP...</h2>
+		<div style="height: 10px;"></div>
+		<h3>YSC 일정</h3>
+		<div class=home-calender>
+			<iframe
+				src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FSeoul&showNav=0&showDate=1&showTitle=0&showCalendars=0&showTz=0&showPrint=0&src=bW1lMGY3NmcwZm1pOTRpaGpucW9vN3IzcDBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23AD1457"
+				style="border-width:0" width="80%" height="400" frameborder="0" scrolling="no"></iframe>
+		</div>
+	</div>
+
+
+
+	<div class="footer-section">
+		<div class="footer-column">
+			<h4>연세대학교 보안/해킹 동아리 YSC</h4>
+		</div>
+		<div class="footer-column">
+			<h4>Discord:&nbsp</h4> <a href="https://discord.gg/TPxs6Xka7E">https://discord.gg/TPxs6Xka7E</a>
+		</div>
+		<div class="footer-column">
+			<h4>동아리방 위치: To be announced</h4>
+		</div>
 	</div>
 </body>
 
