--- a/template.html
+++ b/template.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-	<title>YSC - #PAGE#</title>
+	<title>Yonsei Security Club - #PAGE#</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
     #HEAD#
 </head>
 
@@ -16,15 +16,15 @@
 			<img class="image" src="Yonsei logo.png" alt="Yonsei Logo">
 		</div>
 		<div class="nav-bar">
-			<a class="nav-button" href="/index.html">Home</a>
-            <!-- Link for CTF Writeups is not functional -->
-			<a class="nav-button" href="/index.html">CTF Writeups</a>
+			<a class="nav-current" href="/index.html">Home</a>
+			<a class="nav-button" href="/resources.html">Public Resources</a>
+			<a class="nav-button" href="/writeups">CTF Writeups</a>
 		</div>
 	</div>
 
 
 
-	<div class="content">
+	<div class="page-content">
 		#CONTENT#
 	</div>
 
