--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 			<img class="image" src="Yonsei logo.png" alt="Yonsei Logo">
 		</div>
 		<div class="nav-bar">
-			<a class="nav-button" href="/">Home</a>
+			<a class="nav-current" href="/index.html">Home</a>
+			<a class="nav-button" href="/resources.html">Public Resources</a>
 			<a class="nav-button" href="/writeups">CTF Writeups</a>
 		</div>
 	</div>
