--- a/src/pages/writeups.html
+++ b/src/pages/writeups.html
@@ -3,14 +3,7 @@
 </head>
 
 <div class="page-content">
-	<iframe id="ctfWriteups" src=""></iframe>
-	<script>
-		fetch('https://api.github.com/repos/y0ns3c/CTF-Writeups')
-			.then(function(response) {
-				return response.json();
-			}).then(function(data) {
-				var iframe = document.getElementById('ctfWriteups');
-				iframe.src = 'data:text/html;base64,' + encodeURIComponent(data['content']);
-			});
-	</script>
+	<h2>참가했던 CTF 이벤트의 문제해설</h2>
+	<br/>
+	<a href="https://github.com/y0ns3c/CTF-Writeups">https://github.com/y0ns3c/CTF-Writeups</a>
 </div>
