Update resources page

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -12,11 +12,45 @@
 		우리 동아리는 2021년 1학기에 송도경 교수님 지도하에 시작했습니다.<br/>
 		<br/>
 	</p>
-	<div style="height: 10px;"></div>
-	<h2>Website is WIP...</h2>
-	<div style="height: 10px;"></div>
-	<h3>YSC 일정</h3>
-	<div class=home-calender>
+	<div class="text-gap"></div>
+	<div class="home-calender">
+		<h3>YSC 일정</h3>
+		<div class="text-gap"></div>
 		<iframe src="https://calendar.google.com/calendar/embed?src=bW1lMGY3NmcwZm1pOTRpaGpucW9vN3IzcDBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ" style="border-width:0" width="80%" height="400" frameborder="0" scrolling="no"></iframe>
 	</div>
+	<div class="text-gap"></div>
+	<h2>활동 이력</h2>
+	<div class="text-gap"></div>
+	<p>
+		2021년도 1학기<br/>
+		<br/>
+		동아리 신설<br/>
+		송도경 교수님의 정기 세미나<br/>
+		- Shellcoding<br/>
+		- Privilege escalation<br/>
+		- Sandboxing<br/>
+		- Memory error + mitigation<br/>
+		- JIT spraying<br/>
+		- ROP<br/>
+		- Kernel security<br/>
+		- Heap + Dynamic allocation<br/>
+		- Race condition<br/>
+		부원들의 pwn college 문제풀이 공유<br/>
+		숭실대, 성균관대, 성신여대 팀과 연합하여 CTF 이벤트 참여<br/>
+		- Samsung CTF<br/>
+		- corCTF<br/>
+	</p>
+	<div class="text-gap"></div>
+	<p>
+		2021년도 2학기<br/>
+		<br/>
+		정기 세미나<br/>
+		- 컴퓨터 기본 구동 원리<br/>
+		- Shellcoding 기법<br/>
+		- Fuzzing (송도경 교수님)<br/>
+		- Buffer overflow<br/>
+		- Side channel<br/>
+		CTF 이벤트 참여와 리뷰<br/>
+		- DamCTF<br/>
+	</p>
 </div>
