--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -1,7 +1,30 @@
 <head>
-	<title>Yonsei Security Club - Public Resources</title>
+	<title>Yonsei Security Club - Resources</title>
 </head>
 
 <div class="page-content">
-	<h2>Website is WIP...</h2>
+	<h2>유용한 자료</h2>
+	<div class="text-gap"></div>
+	<h2>동아리 Github</h2>
+	<p>
+		https://github.com/y0ns3c<br/>
+	</p>
+	<div class="text-gap"></div>
+	<h2>Ghidra decompiler tools</h2>
+	<p>
+		Ghidra: https://ghidra-sre.org/<br/>
+		Decompiler plugin: https://github.com/0xb0bb/pwndra<br/>
+		Import function ID: https://github.com/astrelsky/ghidra_scripts/blob/master/ResolveFidScript.java<br/>
+		Function ID: https://github.com/threatrack/ghidra-fidb-repo<br/>
+		Improve C++ decompiling: https://github.com/CERTCC/kaiju<br/>
+	</p>
+	<div class="text-gap"></div>
+	<h2>학습 자료</h2>
+	<p>
+		어셈블리: https://www.tutorialspoint.com/assembly_programming/index.htm<br/>
+		어셈블리: https://github.com/JHH20/Writing-Shellcode<br/>
+		참고자료: https://www.lazenca.net/<br/>
+		사이버 보안 교육 플랫폼: https://dreamhack.io/<br/>
+		Cryptography: https://cryptohack.org/<br/>
+	</p>
 </div>
