--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -5,26 +5,28 @@
 <div class="page-content">
 	<h2>유용한 자료</h2>
 	<div class="text-gap"></div>
-	<h2>동아리 Github</h2>
+	<h2>동아리 플랫폼과 자료</h2>
 	<p>
-		https://github.com/y0ns3c<br/>
+		Discord: <a href="https://discord.gg/TPxs6Xka7E">https://discord.gg/TPxs6Xka7E</a><br/>
+		Pwn College: <a href="https://yonsei.pwn.college/">https://yonsei.pwn.college/</a><br/>
+		Github: <a href="https://github.com/y0ns3c">https://github.com/y0ns3c</a><br/>
 	</p>
 	<div class="text-gap"></div>
 	<h2>Ghidra decompiler tools</h2>
 	<p>
-		Ghidra: https://ghidra-sre.org/<br/>
-		Decompiler plugin: https://github.com/0xb0bb/pwndra<br/>
-		Import function ID: https://github.com/astrelsky/ghidra_scripts/blob/master/ResolveFidScript.java<br/>
-		Function ID: https://github.com/threatrack/ghidra-fidb-repo<br/>
-		Improve C++ decompiling: https://github.com/CERTCC/kaiju<br/>
+		Ghidra: <a href="https://ghidra-sre.org/">https://ghidra-sre.org/</a><br/>
+		Decompiler plugin: <a href="https://github.com/0xb0bb/pwndra">https://github.com/0xb0bb/pwndra</a><br/>
+		Import function ID: <a href="https://github.com/astrelsky/ghidra_scripts/blob/master/ResolveFidScript.java">https://github.com/astrelsky/ghidra_scripts/blob/master/ResolveFidScript.java</a><br/>
+		Function ID: <a href="https://github.com/threatrack/ghidra-fidb-repo">https://github.com/threatrack/ghidra-fidb-repo</a><br/>
+		Improve C++ decompiling: <a href="https://github.com/CERTCC/kaiju">https://github.com/CERTCC/kaiju</a><br/>
 	</p>
 	<div class="text-gap"></div>
 	<h2>학습 자료</h2>
 	<p>
-		어셈블리: https://www.tutorialspoint.com/assembly_programming/index.htm<br/>
-		어셈블리: https://github.com/JHH20/Writing-Shellcode<br/>
-		참고자료: https://www.lazenca.net/<br/>
-		사이버 보안 교육 플랫폼: https://dreamhack.io/<br/>
-		Cryptography: https://cryptohack.org/<br/>
+		어셈블리: <a href="https://www.tutorialspoint.com/assembly_programming/index.htm">https://www.tutorialspoint.com/assembly_programming/index.htm</a><br/>
+		어셈블리: <a href="https://github.com/JHH20/Writing-Shellcode">https://github.com/JHH20/Writing-Shellcode</a><br/>
+		참고자료: <a href="https://www.lazenca.net/">https://www.lazenca.net/</a><br/>
+		사이버 보안 교육 플랫폼: <a href="https://dreamhack.io/">https://dreamhack.io/</a><br/>
+		Cryptography: <a href="https://cryptohack.org/">https://cryptohack.org/</a><br/>
 	</p>
 </div>
