--- a/src/assets/template.html
+++ b/src/assets/template.html
@@ -18,6 +18,7 @@
 			<a class="nav-button" href="/home.html">Home</a>
 			<a class="nav-button" href="/resources.html">Resources</a>
 			<a class="nav-button" href="/writeups.html">CTF Writeups</a>
+			<a class="nav-button" href="/rules.html">Rules</a>
 		</div>
 	</div>
 
