--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -4,6 +4,8 @@
 </head>
 
 <div class="page-content">
+	<h2>소개</h2>
+	<div class="text-gap"></div>
 	<p>
 		안녕하세요. 연세대학교 보안/해킹 동아리 Yonsei Security Club (YSC)입니다!<br/>
 		<br/>
@@ -50,7 +52,9 @@
 		- Fuzzing (송도경 교수님)<br/>
 		- Buffer overflow<br/>
 		- Side channel<br/>
+		- Return Oriented Programming</br>
 		CTF 이벤트 참여와 리뷰<br/>
 		- Overflow to Fall<br/>
+		- DiceCTF
 	</p>
 </div>
