--- a/src/pages/rules.html
+++ b/src/pages/rules.html
@@ -40,7 +40,7 @@
 		동아리 활동을 영구적으로 정지한 회원</br>
 		- 정회원의 최소활동 기준에서 면제</br>
 		- 특강과 같은 예외적이고 일시적인 참가는 가능</br>
-		- 통아리방과 동아리 자료, 플랫폼 이용 가능</br>
+		- 동아리방과 동아리 자료, 플랫폼 이용 가능</br>
 		</br>
 		졸업회원 요건</br>
 		- 최소 2학기 이상 활동</br>
