--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -8,7 +8,8 @@
 	<h2>동아리 플랫폼과 자료</h2>
 	<p>
 		Discord: <a href="https://discord.gg/TPxs6Xka7E">https://discord.gg/TPxs6Xka7E</a><br/>
-		Pwn College: <a href="https://yonsei.pwn.college/">https://yonsei.pwn.college/</a><br/>
+		Yonsei Pwn College: <a href="https://yonsei.pwn.college/">https://yonsei.pwn.college/</a><br/>
+		Official Pwn College: <a href="https://pwn.college/">https://pwn.college</a><br/>
 		Github: <a href="https://github.com/y0ns3c">https://github.com/y0ns3c</a><br/>
 	</p>
 	<div class="text-gap"></div>
