--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -7,7 +7,7 @@
 	<h2>소개</h2>
 	<div class="text-gap"></div>
 	<p>
-		안녕하세요. 연세대학교 보안/해킹 동아리 Yonsei Security Club (YSC)입니다!<br/>
+		안녕하세요. 연세대학교 정보보안/해킹 동아리 Yonsei Security Club (YSC)입니다!<br/>
 		<br/>
 		YSC에서는 보안 취약점과 공격 기법을 공부하는 것을 주 목적으로 합니다. CTF 등 보안 관련 이벤트에 정기적으로 참여하며 그에 필요한 시스템 해킹(포너블)과 바이너리 실행파일을 분석하는 리버싱을 학습하는 것을 목표로 합니다.<br/>
 		<br/>
