--- a/src/pages/rules.html
+++ b/src/pages/rules.html
@@ -1,5 +1,5 @@
 <head>
-	<time>Yonsei Security Club - Rules</time>
+	<title>Yonsei Security Club - Rules</title>
 </head>
 
 <div class="page-content">
@@ -9,6 +9,7 @@
 		- 세미나 주최 3시간</br>
 		- 세미나 수강 6시간</br>
 		- Pwn College 15문제 풀기</br>
+		- DreamHack 8문제 풀기</br>
 		- CTF 이벤트 5회 참가</br>
 		- CTF writeup 5개 작성</br>
 		</br>
