--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -65,9 +65,9 @@
 		- 컴퓨터 기본 구동 원리<br/>
 		- 어셈블리<br/>
 		오프라인 스터디<br/>
-		- 시스템 해킹
-		- 웹 해킹
-		- 포너블 작성
+		- 시스템 해킹<br/>
+		- 웹 해킹<br/>
+		- 포너블 작성<br/>
 		CTF 이벤트 참여와 리뷰<br/>
 		- TJCTF
 	</p>
