--- a/src/assets/template.html
+++ b/src/assets/template.html
@@ -35,7 +35,7 @@
 			<h4>연세대학교 보안/해킹 동아리 YSC</h4>
 		</div>
 		<div class="footer-column">
-			<h4>Discord:&nbsp</h4> <a href="https://discord.gg/TPxs6Xka7E">https://discord.gg/TPxs6Xka7E</a>
+			<h4>회장 황종현:&nbsp</h4> <a href="mailto:jhh20.ysc@icloud.com">jhh20.ysc@icloud.com</a>
 		</div>
 		<div class="footer-column">
 			<h4>동아리방 위치: 제1공학관 5층 A525</h4>
