--- a/src/pages/rules.html
+++ b/src/pages/rules.html
@@ -5,16 +5,10 @@
 <div class="page-content">
 	<h2>정회원 최소활동 기준</h2>
 	<p>
-		다음 학기가 시작되기 전까지 다음 항목의 달성률의 합이 100% 이상</br>
-		- 세미나 주최 3시간</br>
-		- 세미나 수강 6시간</br>
-		- Pwn College 15문제 풀기</br>
-		- DreamHack 8문제 풀기</br>
-		- CTF 이벤트 5회 참가</br>
-		- CTF writeup 5개 작성</br>
+		동아리 활동을 대면으로 전환함에 따라 오프라인 활동 참여도를 기반으로 한 기준이 존재합니다.
 		</br>
 		회원 자격 박탈
-		- 최소활동 기준 미달 시</br>
+		- 오프라인 활동 참여도가 심각하게 저조한 경우</br>
 		- 한 학기에 2번 세미나 수강을 신청하고 노쇼*할 시</br>
 		</br>
 		* 신청한 세미나가 시작하기 24시간 이전에 사전통보 없이 불참하는 경우</br>
