Add wargame writeup repo
Update CTF Writeups page title to Writeups
Add link to private repo containing DreamHack wargame writeups

--- a/src/assets/template.html
+++ b/src/assets/template.html
@@ -17,7 +17,7 @@
 		<div class="nav-bar">
 			<a class="nav-button" href="/home.html">Home</a>
 			<a class="nav-button" href="/resources.html">Resources</a>
-			<a class="nav-button" href="/writeups.html">CTF Writeups</a>
+			<a class="nav-button" href="/writeups.html">Writeups</a>
 			<a class="nav-button" href="/rules.html">Rules</a>
 		</div>
 	</div>
