--- a/src/pages/writeups.html
+++ b/src/pages/writeups.html
@@ -1,9 +1,11 @@
 <head>
-	<title>Yonsei Security Club - CTF Writeups</title>
+	<title>Yonsei Security Club - Writeups</title>
 </head>
 
 <div class="page-content">
 	<h2>참가했던 CTF 이벤트의 문제해설</h2>
 	<br/>
-	<a href="https://github.com/y0ns3c/CTF-Writeups">https://github.com/y0ns3c/CTF-Writeups</a>
+	<a href="https://github.com/y0ns3c/CTF-Writeups">https://github.com/y0ns3c/CTF-Writeups</a><br/>
+	<h2>풀었던 드림핵 워게임의 문제해설</h2>
+	<a href="https://github.com/y0ns3c/DreamHack-Wargame-Solutions">https://github.com/y0ns3c/DreamHack-Wargame-Solutions (비공개)</a><br/>
 </div>
