Add CTF tools to Resources page

--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -30,4 +30,12 @@
 		참고자료: <a href="https://www.lazenca.net/">https://www.lazenca.net/</a><br/>
 		Cryptography: <a href="https://cryptohack.org/">https://cryptohack.org/</a><br/>
 	</p>
+	<div class="text-gap"></div>
+	<h2>CTF 도구</h2>
+	<p>
+		LibC 버전 검색: <a href="https://libc.rip/">https://libc.rip/</a><br/>
+		해쉬 분석: <a href="https://www.tunnelsup.com/hash-analyzer/">https://www.tunnelsup.com/hash-analyzer/</a><br/>
+		드림핵 도구모음: <a href="https://tools.dreamhack.games/">https://tools.dreamhack.games/</a><br/>
+		암호 복호화: <a href="https://www.boxentriq.com/">https://www.boxentriq.com/</a><br/>
+	</p>
 </div>
